--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
+    <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>client</title>
-  </head>
-  <body>
+    <title>医保关联探索可视化系统</title>
+</head>
+
+<body>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
